--- a/core/src/styles/fd.scss
+++ b/core/src/styles/fd.scss
@@ -1,5 +1,3 @@
-/* Write your global styles here; in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
-@import '@sap-theming/theming-base-content/content/Base/baseLib/sap_fiori_3/css_variables.css';
 @import 'fundamental-styles/dist/theming/sap_fiori_3.css';
 @import 'fundamental-styles/dist/icon.css';
 @import 'fundamental-styles/dist/layout.css';
@@ -48,7 +46,7 @@
 //'./node_modules/fundamental-styles/dist/section.css';
 @import 'fundamental-styles/dist/segmented-button.css';
 @import 'fundamental-styles/dist/select.css';
-@import 'fundamental-styles/dist/shellbar.css';
+//@import 'fundamental-styles/dist/shellbar.css';
 @import 'fundamental-styles/dist/side-nav.css';
 @import 'fundamental-styles/dist/switch.css';
 //'./node_modules/fundamental-styles/dist/step-input.css'
@@ -64,60 +62,3 @@
 //'./node_modules/fundamental-styles/dist/tree.css';
 @import 'fundamental-styles/dist/helpers.css';
 @import 'fundamental-styles/dist/user-menu.css';
-
-
-@font-face {
-  font-family: '72';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Light-full.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: '72';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Light-full.woff2') format('woff2');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: '72';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Bold-full.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: '72';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Bold-full.woff2') format('woff2');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: '72';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Regular-full.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: '72';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/72-Regular-full.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'SAP-icons';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/SAP-icons.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'SAP-icons';
-  src: url('@sap-theming/theming-base-content/content/Base/baseLib/baseTheme/fonts/SAP-icons.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
