--- a/core/src/styles/fd.scss
+++ b/core/src/styles/fd.scss
@@ -46,7 +46,7 @@
 //'./node_modules/fundamental-styles/dist/section.css';
 @import 'fundamental-styles/dist/segmented-button.css';
 @import 'fundamental-styles/dist/select.css';
-//@import 'fundamental-styles/dist/shellbar.css';
+@import 'fundamental-styles/dist/shellbar.css';
 @import 'fundamental-styles/dist/side-nav.css';
 @import 'fundamental-styles/dist/switch.css';
 //'./node_modules/fundamental-styles/dist/step-input.css'
